--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(SimpleQuadTree C)
 
 set(CMAKE_C_STANDARD 23)
 
+add_subdirectory(vendor)
 add_executable(SimpleQuadTree main.c)
+target_link_libraries(SimpleQuadTree raylib)
